# KSPEC_ICS

./: .KSPECRUN.py.swp  .gitignore  KSPECGUI.ui  KSPECGUI_20260223.ui  KSPECRUN.py  KSPECRUN_gui.py  KSPECRUN_gui_20260519.py  KSPECRUN_origin.py  KSPECRUN_temp.py  README.GUI  README.md  TCStest.py  icscommand.py  kspec_logo_small_rc.py  pyproject.toml  redis_test.py  run_ics.sh  test.py  ttt.py  ui_mainwindow.p  ui_mainwindow.py
GFA/kspec_gfa_controller/: .coverage  .gitignore  README.md  changelog.md  coverage.xml  gfa_actions.py  gfa_astrometry.py  gfa_logger.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  ruff.toml
GFA/kspec_gfa_controller/.github/workflows/: release.yaml  ruff.yml  tests.yml
GFA/kspec_gfa_controller/etc/: REAME.txt
GFA/kspec_gfa_controller/python/gfa_controller/: gfa_actions.py  gfa_astrometry.py  gfa_controller.py  gfa_guider.py  gfa_img.py  gfa_logger.py
GFA/kspec_gfa_controller/scripts/: set_permissions.sh
GFA/kspec_gfa_controller/src/: .gfa_actions.py.swp  finder_actions.py  gfa_actions.py  gfa_astrometry.py  gfa_controller.py  gfa_environment.py  gfa_getcrval.py  gfa_guider.py  gfa_img.py  gfa_logger.py  gfa_optimization.py  gfa_test.ipynb  gfa_test.py
GFA/kspec_gfa_controller/src/csv_opt/: ipd_ftd_all_camera_results.csv  ipd_ftd_matrix_results.csv
GFA/kspec_gfa_controller/tests/: .coverage  conftest.py  test_gfa_actions.py  test_gfa_astrometry.py  test_gfa_controller.py  test_gfa_environment.py  test_gfa_getcrval.py  test_gfa_guider.py  test_gfa_img.py  test_gfa_logger.py  test_init.py
(+917 files in other folders)
